// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency statistic 1`] = `
<div
  className="bg-credix-primary border border-solid border-darker rounded-[1px] font-sans h-36 w-min min-w-[16rem] md:w-full md:min-w-[12rem] ml-[21.5px] pr-5 flex items-center"
>
  <div
    className="bg-credix-primary ml-[-21.5px]"
  >
    <div
      className="capitalize"
    >
      TVL
    </div>
    <div
      className="text-6xl font-bold"
    >
      14.8M
      <span
        className="text-sm font-normal"
      >
        USDC
      </span>
    </div>
  </div>
</div>
`;

exports[`Percentage statistic 1`] = `
<div
  className="bg-credix-primary border border-solid border-darker rounded-[1px] font-sans h-36 w-min min-w-[16rem] md:w-full md:min-w-[12rem] ml-[21.5px] pr-5 flex items-center"
>
  <div
    className="bg-credix-primary ml-[-21.5px]"
  >
    <div
      className="capitalize"
    >
      Estimated APY
    </div>
    <div
      className="text-6xl font-bold"
    >
      13.8%
      <span
        className="text-sm font-normal"
      />
    </div>
  </div>
</div>
`;
